RESOLVED FIXED222244
[JSC] JSInternalPromise::then can fail if execution is terminated
https://bugs.webkit.org/show_bug.cgi?id=222244
Summary [JSC] JSInternalPromise::then can fail if execution is terminated
Yusuke Suzuki
Reported 2021-02-21 01:36:03 PST
[JSC] JSInternalPromise::then can fail if execution is terminated
Attachments
Patch (1.89 KB, patch)
2021-02-21 01:36 PST, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2021-02-21 01:36:58 PST
Mark Lam
Comment 2 2021-02-21 08:30:41 PST
Comment on attachment 421134 [details] Patch r=me
EWS
Comment 3 2021-02-21 13:08:07 PST
Committed r273222: <https://commits.webkit.org/r273222> All reviewed patches have been landed. Closing bug and clearing flags on attachment 421134 [details].
Radar WebKit Bug Importer
Comment 4 2021-02-21 13:09:13 PST
Note You need to log in before you can comment on or make changes to this bug.