[JSC] JSInternalPromise::then can fail if execution is terminated https://bugs.webkit.org/show_bug.cgi?id=222244

Reviewed by Mark Lam.

JSInternalPromise::then assumed that call's result is always JSInternalPromise.
But this is wrong if termination exception is thrown. In that case, this call fails.
This patch makes it robust against this behavior.

* runtime/JSInternalPromise.cpp:
(JSC::JSInternalPromise::then):


Canonical link: https://commits.webkit.org/234408@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273222 268f45cc-cd09-0410-ab3c-d52691b4dbfc